# sf-reader-all

./: CHANGELOG.md  README.md  README.zh-CN.md  mcp_server.py  pyproject.toml  test_wechat_dom.py
docs/: share-cards.html
examples/: 01_manual_content_roundtrip.py  02_inbox_dedup_tempfile.py  03_url_validator_blocks_localhost.py  04_list_unprocessed_demo.py  05_inbox_clear_old_demo.py
sf_reader_all/: __init__.py  archiver.py  cli.py  login.py  reader.py  schema.py
sf_reader_all/fetchers/: browser.py  jina.py  telegram.py  twitter.py  wechat.py  xhs.py  youtube.py
sf_reader_all/utils/: mhtml.py  storage.py
skills/analyzer/: SKILL.md  skill.md
skills/archive/: SKILL.md
skills/video/: SKILL.md
x_reader/fetchers/: wechat.py  xhs.py
